Fix contrast RGAA + role tooltip

--- a/assets/css/_variable.scss
+++ b/assets/css/_variable.scss
@@ -10,12 +10,12 @@ $green:					#387522;
 
 $white:					#FFFFFF;
 $black:					#000000;
-$grey:					#b2b2b2;
+$grey:					#B2B2B2;
 
-$grey-disabled:		#777777;
+$grey-disabled:		#5F5F5F;
 $grey-border:			#D9D9D9;
 $grey-footer:			#E2E2E2;
-$grey-modal:			#F3F3F3;
+$grey-modal:			#F9F9F9;
 
 // Fonts
 
