--- a/assets/css/components/_nav-tabs.scss
+++ b/assets/css/components/_nav-tabs.scss
@@ -8,7 +8,7 @@
 
 		&-link {
 			border: $border-default;
-			background-color: $grey-border;
+			background-color: $grey-footer;
 
 			@include media-breakpoint-up(sm) {
 				margin-left: -2px;
